Fixed issue on mobile and added coming soon msg

--- a/themes/manzil/static/css/style.css
+++ b/themes/manzil/static/css/style.css
@@ -105,6 +105,6 @@ body {
 
 @media screen and (max-width:1023px) {
     .menu li {
-        float: left;
+        display: inline-block;
     }
 }
